manifests/nginx-nlb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"

    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:071325923620:certificate/e6c8ab5f-3dcd-42b6-bbbb-2ff4e2b811fc

    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"

    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"

spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx

  ports:
    - name: http
      port: 80
      targetPort: http

    - name: https
      port: 443
      targetPort: http
